# SUML_projekt

./: README.md  pyproject.toml  requirements.txt  start.sh
app/: api.py  rain_prediction_ui.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/base/: catalog.yml  parameters_data_acquisition.yml  parameters_model_selection.yml  parameters_preprocessing.yml  parameters_train_best_model.yml
models/: confusion_matrix.csv  label_encoders.pkl  production_model.pkl  scaler.pkl  test_metrics.json
notebooks/: EDA_notebook.ipynb  Tests.ipynb
src/suml_project/: __init__.py  __main__.py  settings.py
src/suml_project/pipelines/data_acquisition/: __init__.py  nodes.py  pipeline.py
src/suml_project/pipelines/eda/: nodes.py  pipeline.py
src/suml_project/pipelines/model_selection/: nodes.py  pipeline.py
src/suml_project/pipelines/preprocessing/: nodes.py  pipeline.py
src/suml_project/pipelines/train_best_model/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_acquisition/: test_pipeline.py
tests/pipelines/model_selection/: test_pipeline.py
tests/pipelines/preprocessing/: test_pipeline.py
tests/pipelines/train_best_model/: test_pipeline.py
